
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_SUCCESS ;
 int IP ;
 scalar_t__ OK ;
 scalar_t__ check_for_iis () ;
 int exit (int ) ;
 int printf (char*) ;
 int screw_iis () ;
 int strcpy (int ,char*) ;
 int usage () ;

int main(int argc, char *argv[])
{


   if(argc !=2)
   {
      usage(); exit(0);
   }

   printf("IIS eXploit. by velan. Greetz to: Shashank Pandey a.k.a +(Neo1)+\n");

   strcpy(IP, argv[1]);

   if(check_for_iis() != OK)
   {
      printf("Sorry, BAD LUCK! \n"); exit(0);
   }

   screw_iis();

  return EXIT_SUCCESS;
}
