; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_22670.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_22670.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [66 x i8] c"IIS eXploit. by velan. Greetz to: Shashank Pandey a.k.a +(Neo1)+\0A\00", align 1
@IP = common dso_local global i32 0, align 4
@OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [19 x i8] c"Sorry, BAD LUCK! \0A\00", align 1
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 2
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = call i32 (...) @usage()
  %10 = call i32 @exit(i32 0) #3
  unreachable

11:                                               ; preds = %2
  %12 = call i32 @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* @IP, align 4
  %14 = load i8**, i8*** %5, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 1
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @strcpy(i32 %13, i8* %16)
  %18 = call i64 (...) @check_for_iis()
  %19 = load i64, i64* @OK, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %11
  %22 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %23 = call i32 @exit(i32 0) #3
  unreachable

24:                                               ; preds = %11
  %25 = call i32 (...) @screw_iis()
  %26 = load i32, i32* @EXIT_SUCCESS, align 4
  ret i32 %26
}

declare dso_local i32 @usage(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @strcpy(i32, i8*) #1

declare dso_local i64 @check_for_iis(...) #1

declare dso_local i32 @screw_iis(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
